feat: add java spotless code formatter
Signed-off-by: Jude Niroshan <jude.niroshan11@gmail.com>